# Triangles-SDF-CPU-RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt
resources/: sdf_5.octree  sdf_6.octree
src/: camera.cpp  camera.hpp  grid_raytracing.cpp  grid_raytracing.hpp  imgui_adaptors.cpp  imgui_adaptors.hpp  main.cpp  octree_raytracing.cpp  octree_raytracing.hpp  quaternion.cpp  quaternion.hpp  ray_pack.ispc  raytracing.cpp  raytracing.hpp  sdl_adaptor.cpp  sdl_adaptor.hpp  sdl_adaptors.cpp  sdl_adaptors.hpp  triangles_raytracing.cpp  triangles_raytracing.hpp
src/core/: mesh.cpp  mesh.h  tiny_obj_loader.h
